--- a/index.html
+++ b/index.html
@@ -32,22 +32,19 @@
           <div class="chat-fixed-content">
             <i class="far fa-smile"></i>
             <input type="text" name="messaggio" value="" placeholder="Scrivi un messaggio">
-            <i class="fas fa-microphone"></i>
+            <i class="mic fas fa-microphone"></i>
+            <i class="invio fas fa-paper-plane"></i>
           </div>
         </div>
 
         <!-- balloons chat -->
-        <div class="balloons">
-          <div class="messaggio green">
-            <span>Teto messaggio</span>
-          </div>
-          <div class="messaggio white">
-            <span>Teto messaggio</span>
-          </div>
-          <div class="messaggio green">
-            <span>Teto messaggio</span>
-          </div>
+        <div id="target" class="balloons">
 
+        </div>
+        <div class="template" style="display: none">
+          <div class="messaggio">
+            <span>Testo messaggio</span>
+          </div>
 
         </div>
       </div>
