modifiche html-css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,124 @@
   <body>
     <div class="container">
       <div class="contatti">
+        <div class="contatti-fixed">
+          <div class="top-bar-content">
+            <div class="profile-img">
+            </div>
+            <div class="contact-option">
+              <i class="fas fa-circle-notch"></i>
+              <i class="fas fa-comment-alt"></i>
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
+
+          <div class="silent-bar">
+            <div class="silent-icon">
+              <i class="far fa-bell-slash"></i>
+            </div>
+            <div class="silent-bar-info">
+              <a href="#">Ricevi notifiche di nuovi messaggi</a>
+              <a href="#">Attiva notifiche desktop</a>
+            </div>
+          </div>
+
+          <div class="cerca-contatti">
+            <div class="search-contact-icon">
+              <i class="fas fa-search"></i>
+            </div>
+            <input type="text" name="ricerca" value="" placeholder="Cerca o inizia una nuova chat">
+          </div>
+
+        </div>
+
+        <div class="rubrica">
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+          <div class="contatto-rubrica">
+            <div class="profile-img">
+            </div>
+            <div class="contact-name">
+              <h4>Nome Contatto</h4>
+              <span>Qualcosa di qualcosa</span>
+              <span id="ora">17:40</span>
+            </div>
+          </div>
+
+        </div>
+
+
 
       </div>
+
+      <!-- inizio parte chat -->
       <div class="chat">
         <div class="top-bar">
           <div class="friend-info-left">
