modifiche html-css-js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Boolzapp</title>
@@ -45,7 +46,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Michele</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -55,7 +56,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Giulio</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -65,7 +66,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Andrea</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -75,7 +76,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Golia</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -85,7 +86,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Giuseppe</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -95,7 +96,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Napoleone</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -105,7 +106,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Augusto</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -115,7 +116,7 @@
             <div class="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Nome Contatto</h4>
+              <h4>Federica</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -134,7 +135,7 @@
             <div class="profile-img">
             </div>
             <div class="friend-name">
-              <h4>Nome Amico</h4>
+              <h4>Michele</h4>
               <span>Ultimo accesso oggi alle 11.15</span>
             </div>
           </div>
@@ -149,7 +150,7 @@
             <i class="far fa-smile"></i>
             <input type="text" name="messaggio" value="" placeholder="Scrivi un messaggio">
             <i class="mic fas fa-microphone"></i>
-            <i class="invio fas fa-paper-plane"></i>
+            <i class="invio fas fa-chevron-circle-up"></i>
           </div>
         </div>
 
@@ -159,7 +160,12 @@
         </div>
         <div class="template" style="display: none">
           <div class="messaggio">
-            <span>Testo messaggio</span>
+            <span class="txt">Testo messaggio</span>
+            <span class="time"></span>
+            <div class="dropdown-delete">
+              <a href="#">Info messaggio</a>
+              <a href="#">Cancella messaggio</a>
+            </div>
           </div>
 
         </div>
