aggiunta funzione per cancellare i messaggi

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="rubrica">
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='1'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='2'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -62,7 +62,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='3'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -72,7 +72,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='4'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='5'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -92,7 +92,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='6'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -102,7 +102,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='7'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -112,7 +112,7 @@
             </div>
           </div>
 
-          <div class="contatto-rubrica">
+          <div class="contatto-rubrica" data-id='8'>
             <div class="profile-img">
             </div>
             <div class="contact-name">
@@ -155,21 +155,47 @@
         </div>
 
         <!-- balloons chat -->
-        <div id="target" class="balloons">
+        <div id="target" class="balloons" data-id='1'>
 
         </div>
+        <div id="target" class="balloons" data-id='2' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='3' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='4' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='5' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='6' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='7' style="display: none">
+
+        </div>
+        <div id="target" class="balloons" data-id='8' style="display: none">
+
+        </div>
+
+
+
         <div class="template" style="display: none">
           <div class="messaggio">
             <span class="txt">Testo messaggio</span>
             <span class="time"></span>
             <div class="dropdown-delete">
               <a href="#">Info messaggio</a>
-              <a href="#">Cancella messaggio</a>
+              <a id="delete" href="#">Cancella messaggio</a>
             </div>
           </div>
 
         </div>
       </div>
+      <!-- chat 2 -->
+
     </div>
 
 
