modifiche html-css-js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="contatti-fixed">
           <div class="top-bar-content">
             <div class="profile-img">
+              <img src="img/batman.jpg" alt="profile-img">
             </div>
             <div class="contact-option">
               <i class="fas fa-circle-notch"></i>
@@ -44,9 +45,10 @@
         <div class="rubrica">
           <div class="contatto-rubrica" data-id='1'>
             <div class="profile-img">
+              <img src="img/batman.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Michele</h4>
+              <h4>Bruce</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -54,9 +56,10 @@
 
           <div class="contatto-rubrica" data-id='2'>
             <div class="profile-img">
+              <img src="img/mario.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Giulio</h4>
+              <h4>Mario</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -64,9 +67,10 @@
 
           <div class="contatto-rubrica" data-id='3'>
             <div class="profile-img">
+              <img src="img/terminator.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Andrea</h4>
+              <h4>Arnold</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -74,9 +78,10 @@
 
           <div class="contatto-rubrica" data-id='4'>
             <div class="profile-img">
+              <img src="img/superman.jpeg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Golia</h4>
+              <h4>Clark</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -84,9 +89,10 @@
 
           <div class="contatto-rubrica" data-id='5'>
             <div class="profile-img">
+              <img src="img/phineas.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Giuseppe</h4>
+              <h4>Phineas</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -94,9 +100,10 @@
 
           <div class="contatto-rubrica" data-id='6'>
             <div class="profile-img">
+              <img src="img/trooper.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Napoleone</h4>
+              <h4>Trooper</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -104,9 +111,10 @@
 
           <div class="contatto-rubrica" data-id='7'>
             <div class="profile-img">
+              <img src="img/ferb.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Augusto</h4>
+              <h4>Ferb</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -114,9 +122,10 @@
 
           <div class="contatto-rubrica" data-id='8'>
             <div class="profile-img">
+              <img src="img/topolino.jpg" alt="profile-img">
             </div>
             <div class="contact-name">
-              <h4>Federica</h4>
+              <h4>Mickey</h4>
               <span>Qualcosa di qualcosa</span>
               <span id="ora">17:40</span>
             </div>
@@ -133,9 +142,10 @@
         <div class="top-bar">
           <div class="friend-info-left">
             <div class="profile-img">
+              <img src="img/batman.jpg" alt="profile-img">
             </div>
             <div class="friend-name">
-              <h4>Michele</h4>
+              <h4>Bruce</h4>
               <span>Ultimo accesso oggi alle 11.15</span>
             </div>
           </div>
@@ -155,28 +165,28 @@
         </div>
 
         <!-- balloons chat -->
-        <div id="target" class="balloons" data-id='1'>
+        <div class="balloons" data-id='1'>
 
         </div>
-        <div id="target" class="balloons" data-id='2' style="display: none">
+        <div class="balloons" data-id='2' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='3' style="display: none">
+        <div class="balloons" data-id='3' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='4' style="display: none">
+        <div class="balloons" data-id='4' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='5' style="display: none">
+        <div class="balloons" data-id='5' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='6' style="display: none">
+        <div class="balloons" data-id='6' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='7' style="display: none">
+        <div class="balloons" data-id='7' style="display: none">
 
         </div>
-        <div id="target" class="balloons" data-id='8' style="display: none">
+        <div class="balloons" data-id='8' style="display: none">
 
         </div>
 
@@ -194,7 +204,6 @@
 
         </div>
       </div>
-      <!-- chat 2 -->
 
     </div>
 
