aggiunta metodo per cambiare conversazione

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="friend-name">
               <h4>Bruce</h4>
-              <span>Ultimo accesso oggi alle 11.15</span>
+              <span>Ultimo accesso oggi alle <span id="ultimo-accesso">11.15</span></span>
             </div>
           </div>
           <div class="friend-info-right">
@@ -164,37 +164,64 @@
           </div>
         </div>
 
-        <!-- balloons chat -->
-        <div class="balloons" data-id='1'>
+        <!-- contenitori chat -->
+        <div class="chat-container active" data-id='1'>
+          <div class="balloons" >
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='2' style="display: none">
+        <div class="chat-container" data-id='2'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='3' style="display: none">
+        <div class="chat-container" data-id='3'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='4' style="display: none">
+        <div class="chat-container" data-id='4'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='5' style="display: none">
+        <div class="chat-container" data-id='5'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='6' style="display: none">
+        <div class="chat-container" data-id='6'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='7' style="display: none">
+        <div class="chat-container" data-id='7'>
+          <div class="balloons">
+
+          </div>
 
         </div>
-        <div class="balloons" data-id='8' style="display: none">
+        <div class="chat-container" data-id='8'>
+          <div class="balloons">
+
+          </div>
 
         </div>
+
+
 
 
 
         <div class="template" style="display: none">
           <div class="messaggio">
             <span class="txt">Testo messaggio</span>
+            <i class="fas fa-chevron-down"></i>
             <span class="time"></span>
             <div class="dropdown-delete">
               <a href="#">Info messaggio</a>
